--- a/rladies_paris_talk_useR2024.qmd
+++ b/rladies_paris_talk_useR2024.qmd
@@ -30,7 +30,8 @@ In this presentation, I will cover the following points:
 1. A brief overview of R-Ladies Global and R-Ladies Paris and our mission. 
 2. Tips and advice for maintaining an R-Ladies Chapter
 3. What Kind of support can you expect?
-4. And finally Guidelines for opening a new chapter
+4. An overview of how to connect with R-Ladies at useR! 2024 that will take place in Salzburg
+5. And finally Guidelines for opening a new chapter
 ::::
 
 # Introduction of R-Ladies Global
